[package]
name = "os"
version = "0.1.0"
authors = ["gytstar <gy163email@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# panic 时直接终止，因为我们没有实现堆栈展开的功能
[profile.dev]
panic = "abort"

# panic 时直接终止，因为我们没有实现堆栈展开的功能
[profile.release]
panic = "abort"

[dependencies]
#rCore 中的库 riscv 封装的一些寄存器操作
riscv = {git = "https://github.com/rcore-os/riscv", features = ["inline-asm"]}
#jiege 写的一个Buddy内存分配
buddy_system_allocator = "0.3.9"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }